Build a Fraction: Shapes: Fixed: Containers are always moving home even if not dropped on toolbox or scoring cells
Build a Fraction: Shapes: Pie shapes: stack up and to the right for containers (as we do for shapes)
Build a Fraction: Shapes: Fixed: Exception when no available location to rotate for
Build a Fraction: Shapes: Rotate when closest match site changed for fractions > 1
Build a Fraction: Shapes: Make pie piece stay near mouse when grabbed from toolbox
Build a Fraction: Shapes: Fixed: Bar shapes not centered vertically in toolbox any more
Build a Fraction: Shapes: Fixed: Pieces don't line up properly with the containers
Build a Fraction: Shapes: If the user got the incorrect answer, send back to the play area
# 1.00.10 (66281) Jul 26, 2012
Build a Fraction: Added shadows for dragged bar pieces
Build a Fraction: Added shadows for dragged pie pieces
Build a Fraction: Fixed: Stars should not clear on "refresh"
Build a Fraction: Fixed: Stars do not clear on "reset all"
Build a Fraction: Fill in stars as challenges and levels are completed
Build a Fraction: Fixed: Pie shapes don't go back to the right location in the toolbox
Build a Fraction: Fixed: Pie shapes should stack up and to the right
Build a Fraction: Fixed: Pieces should rotate when going back to the toolbox
Build a Fraction: Fixed container divisions for pie shapes
Build a Fraction: Rotate pie shapes when dragged from toolbox, not when dropped into container
Build a Fraction: Fixed: Pie shapes should fit into containers in the toolbox
Build a Fraction: Fixed toolbox height for different shape types
Build a Fraction: Store progress when pushing back button
Build a Fraction: Don't highlight the target box
Build a Fraction: Only consider the target collection box for matching (based on centers), otherwise students can overlap many boxes instead of thinking of the correct answer
Fraction Matcher: Added a "refresh" level button that creates new challenges for the same level